studio 상세 조회 로직